# Tkinter-Page_Router-API

./: .gitignore  BUILD_PACKAGE.bat  README.md  pyproject.toml  setup.py
test/: main.py
tkinter_page_router/: router.py
