[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tkinter_router_tpham7"
version = "0.0.1"
authors = [
  { name="Trai Pham", email="traipham16@yahoo.com" },
]
description = "A tkinter router API. Can create multiple pages with associated button routing to personalizable page(frame)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
